--- a/cards.html
+++ b/cards.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="gray-rectangle"></div>
+        <div class="black-rectangle"></div>
         <div class="orange-rectangle"></div>
+        <div class="competition">Tashkent Grand Slam Judo Tashkent Grand</div>
+        <div class="année">2024</div>
+        <img src="/Users/gillescobigo/Desktop/11-Judo-Grand-Slam-Paris-Mens-Heavyweight-+100-kg-February-4th-2024.png" alt="Image" class="image">
+
     </div>
 </body>
 </html>
