--- a/cards.html
+++ b/cards.html
@@ -10,9 +10,11 @@
     <div class="container">
         <div class="black-rectangle"></div>
         <div class="orange-rectangle"></div>
-        <div class="competition">Tashkent Grand Slam Judo Tashkent Grand</div>
+        <div class="competition">Paris Grand Slam Judo</div>
         <div class="année">2024</div>
+        <div class="fond-prompt"></div>
         <img src="/Users/gillescobigo/Desktop/11-Judo-Grand-Slam-Paris-Mens-Heavyweight-+100-kg-February-4th-2024.png" alt="Image" class="image">
+        <div class="prompt">Teddy Riner (FRA) wins the Men's Heavyweight (+100 kg) during the Paris Grand Slam Judo in France on February 4th</div>
 
     </div>
 </body>
