Mise en place des @ et # pour les winners, competitions et events

--- a/cards.html
+++ b/cards.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="black-rectangle"></div>
         <div class="orange-rectangle"></div>
-        <div class="competition">comp_of_sport</div>
+        <div class="competition">E3 Saxo Bank Classic Road Cycling  Event Event Event</div>
         <div class="année">2024</div>
         <div class="fond-prompt"></div>
         <img src="/Users/gillescobigo/Desktop/6-Judo-Grand-Slam-Tashkent-Womens-Heavyweight-+78-kg-March-3rd-2024.png" alt="Image" class="image">
